<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:paddingBottom="40dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title_textView"
        android:layout_width="237dp"
        android:layout_height="wrap_content"
        android:drawablePadding="-20dp"
        android:gravity="center_horizontal|center_vertical"
        android:paddingStart="10dp"
        android:paddingEnd="40dp"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:text="@string/app_name"
        android:textSize="20sp"
        app:drawableLeftCompat="@mipmap/ic_launcher_foreground"
        app:layout_constraintBottom_toTopOf="@+id/getscore_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/getscore_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:alpha="80"
        android:paddingTop="24dp"
        android:paddingBottom="24dp"
        android:text="@string/get_score_button"
        android:textSize="18sp"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_textView" />

    <Button
        android:id="@+id/history_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="80dp"
        android:alpha="80"
        android:backgroundTint="@color/gray"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:text="@string/history_button"
        android:textSize="14sp"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/getscore_button" />

    <Button
        android:id="@+id/tips_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="80dp"
        android:alpha="80"
        android:backgroundTint="@color/gray"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:text="@string/instructions_button"
        android:textSize="14sp"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/history_button" />

</androidx.constraintlayout.widget.ConstraintLayout>